fix z-index

--- a/src/assets/scss/components/_components-mobilemenu.scss
+++ b/src/assets/scss/components/_components-mobilemenu.scss
@@ -12,6 +12,7 @@
   height: 100%;
   background-color: var(--color-brand-dark);
   padding: calc(18 / 16 * 1rem);
+  z-index: 9999;
 }
 
 .c-mobilemenu.is-open {
